# rein-kuro

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  pyproject.toml  reincli.py  setup.cfg  setup.py
reinkuro/: kuro.py  octo.py  octodb.proto  octodb_pb2.py
reinkuro/_clibs/: __init__.py  kuromodule.c
reinkuro/_clibs/kuro/: kuro.c  kuro.h
tests/: test_reinkuro.py
